syntax = "proto3";

package calculator;

option go_package = "github.com/adetiamarhadi/udemy-grpc-go/calculator/proto";

import "primes.proto";

message SumRequest {
    int32 number_1 = 1;
    int32 number_2 = 2;
}

message SumResponse {
    int32 result = 1;
}

message AvgRequest {
    int32 number = 1;
}

message AvgResponse {
    double result = 1;
}

service CalculatorService {
    rpc Sum (SumRequest) returns (SumResponse);
    rpc Primes (PrimeRequest) returns (stream PrimeResponse);
    rpc Avg (stream AvgRequest) returns (AvgResponse);
}